--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/Gq7TFabQTF/Finance-Business-System-Analyst'>Finance Business System Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/Gq7TFabQTF/Finance-Business-System-Analyst'>Finance Business System Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -256,7 +256,7 @@ using?...</p>
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
+<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -270,7 +270,7 @@ using?...</p>
 <p><span class="badge badge-light">Luxembourg Luxembourg</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -302,7 +302,7 @@ using?...</p>
 <p><span class="badge badge-light">New York, New York  New York Chicago Atlanta</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/mavenlink/job/osmnbfw6'>Mavenlink Careers - Senior Business Intelligence Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mavenlink/job/osmnbfw6'>Mavenlink Careers - Senior Business Intelligence Consultant</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -343,7 +343,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-1075'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-1075'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -351,7 +351,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Austin Austin Austin</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/system1/925d935b-a1ec-48a3-ae71-a1fdf252e61f'>System1 - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Venice, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -395,7 +395,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/5348d0e5-f486-46bd-be0b-a89d6a21597e'>Bill.com - Business Intelligence Analyst - Contractor</a></h5> 
+<h5><a href='https://jobs.lever.co/bill/5348d0e5-f486-46bd-be0b-a89d6a21597e'>Bill.com - Business Intelligence Analyst - Contractor</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -408,7 +408,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -420,7 +420,7 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/business-intelligence-architect-12416'>Business Intelligence Architect - AbbVie Careers</a></h5> 
+<h5><a href='https://abbvie.referrals.selectminds.com/jobs/business-intelligence-architect-12416'>Business Intelligence Architect - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
